support btn, fixes, body overflow

--- a/src/assets/sass/components/_quick-reg.sass
+++ b/src/assets/sass/components/_quick-reg.sass
@@ -43,7 +43,7 @@
   .quick-reg
     margin-bottom: -34px
     padding: 30px
-    background-image: url('../img/quick-reg-bg-mob.jpg')
+    background-image: url('../img/quick-reg-bg-mob.png')
 
     .title-site
       font-size: 20px
